codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_mcp_server_configuration codex_agent_mcp_server_configuration_t;
typedef struct codex_agent_mcp_server codex_agent_mcp_server_t;
typedef struct codex_agent_service_tier codex_agent_service_tier_t;
typedef struct codex_agent_connector codex_agent_connector_t;
typedef struct codex_agent_model codex_agent_model_t;
typedef int32_t codex_agent_mcp_auth_status_t;
typedef int32_t codex_agent_resource_origin_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *id,
    const codex_agent_string_view_t *display_name,
    const codex_agent_string_view_t *description,
    const codex_agent_string_view_t *supported_efforts,
    size_t supported_effort_count,
    const codex_agent_string_view_t *default_effort,
    int32_t is_default,
    codex_agent_service_tier_t *const *service_tiers,
    size_t service_tier_count,
    int32_t has_default_service_tier,
    const codex_agent_string_view_t *default_service_tier,
    codex_agent_model_t **out_model);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_destroy(
    codex_agent_context_t *context,
    codex_agent_model_t **model);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_id_copy(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_display_name_copy(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_description_copy(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_supported_efforts_count(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_supported_effort_copy_at(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_default_effort_copy(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_is_default(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    int32_t *out_is_default);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_service_tiers_count(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_service_tier_at(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    size_t index,
    codex_agent_service_tier_t **out_tier);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_has_default_service_tier(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    int32_t *out_has_default_service_tier);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_model_default_service_tier_copy(
    codex_agent_context_t *context,
    codex_agent_model_t *model,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_service_tier_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *id,
    const codex_agent_string_view_t *name,
    const codex_agent_string_view_t *description,
    codex_agent_service_tier_t **out_tier);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_service_tier_destroy(
    codex_agent_context_t *context,
    codex_agent_service_tier_t **tier);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_service_tier_id_copy(
    codex_agent_context_t *context,
    codex_agent_service_tier_t *tier,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_service_tier_name_copy(
    codex_agent_context_t *context,
    codex_agent_service_tier_t *tier,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_service_tier_description_copy(
    codex_agent_context_t *context,
    codex_agent_service_tier_t *tier,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *id,
    const codex_agent_string_view_t *name,
    const codex_agent_string_view_t *description,
    int32_t has_install_url,
    const codex_agent_string_view_t *install_url,
    int32_t is_accessible,
    int32_t is_enabled,
    const codex_agent_string_view_t *plugin_names,
    size_t plugin_name_count,
    codex_agent_connector_t **out_connector);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_destroy(
    codex_agent_context_t *context,
    codex_agent_connector_t **connector);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_id_copy(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_name_copy(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_description_copy(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_has_install_url(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    int32_t *out_has_install_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_install_url_copy(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_is_accessible(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    int32_t *out_is_accessible);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_is_enabled(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    int32_t *out_is_enabled);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_plugin_names_count(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_connector_plugin_names_copy_at(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_mcp_server_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *name,
    const codex_agent_string_view_t *display_name,
    codex_agent_mcp_auth_status_t auth_status,
    codex_agent_mcp_server_configuration_t *configuration,
    codex_agent_resource_origin_t origin,
    int32_t can_remove,
    codex_agent_mcp_server_t **out_server);