codex-agent-runtime-desktop/bindings/csharp/src/CodexAgent/Interop/NativeLeafValueMethods.cs

    [LibraryImport(LibraryName, EntryPoint="codex_agent_mcp_server_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus McpServerCreate(nint c,NativeStringView* name,NativeStringView* displayName,CodexMcpAuthStatus authStatus,nint configuration,CodexResourceOrigin origin,int canRemove,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_service_tier_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ServiceTierCreate(nint c, NativeStringView* id, NativeStringView* name, NativeStringView* description, out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_service_tier_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ServiceTierDestroy(nint c, ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_service_tier_id_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ServiceTierIdCopy(nint c, nint value, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_service_tier_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ServiceTierNameCopy(nint c, nint value, byte* buffer, nuint capacity, out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_service_tier_description_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ServiceTierDescriptionCopy(nint c, nint value, byte* buffer, nuint capacity, out nuint required);

    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelCreate(nint c, NativeStringView* id, NativeStringView* displayName, NativeStringView* description, NativeStringView* efforts, nuint effortCount, NativeStringView* defaultEffort, int isDefault, nint* tiers, nuint tierCount, int hasDefaultTier, NativeStringView* defaultTier, out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelDestroy(nint c, ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_id_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelIdCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_display_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelDisplayNameCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_description_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelDescriptionCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_supported_efforts_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelSupportedEffortsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_supported_effort_copy_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelSupportedEffortCopyAt(nint c,nint value,nuint index,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_default_effort_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelDefaultEffortCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_is_default")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelIsDefault(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_service_tiers_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelServiceTiersCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_service_tier_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelServiceTierAt(nint c,nint value,nuint index,out nint tier);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_has_default_service_tier")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelHasDefaultServiceTier(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_model_default_service_tier_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ModelDefaultServiceTierCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);

    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorCreate(nint c,NativeStringView* id,NativeStringView* name,NativeStringView* description,int hasInstallUrl,NativeStringView* installUrl,int accessible,int enabled,NativeStringView* plugins,nuint count,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_id_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorIdCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorNameCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_description_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorDescriptionCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_has_install_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorHasInstallUrl(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_install_url_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorInstallUrlCopy(nint c,nint value,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_is_accessible")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorIsAccessible(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_is_enabled")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorIsEnabled(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_plugin_names_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorPluginNamesCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_connector_plugin_names_copy_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus ConnectorPluginNamesCopyAt(nint c,nint value,nuint index,byte* buffer,nuint capacity,out nuint required);
